--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+//Topography Styles
 h1, h2, h3 {
     font-family: 'open sans', sans-serif;
 }
 
+//Background Gradient
 .navbar, .home-callout {
     //Gradient provided by @_ighosh at uiGradients.com
     background: #00c6ff;  /* fallback for old browsers */
@@ -28,28 +30,20 @@ background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-2
 background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+//Nav Styles
 .navbar {
     border: none;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
     color: white;
+    &:hover {
+        color: white;
+        opacity: 0.75;
+    }
 }
 
-.navbar-default .navbar-nav > li > a {
-    color: white;
-}
-
-.navbar-default .navbar-brand:hover {
-    color: white;
-    opacity: 0.75;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-    color: white;
-    opacity: 0.75;
-}
-
+//Home Page Styles
 .home-callout {
     color: white;
     margin-top: -20px;
