--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "/", class: "navbar-brand" do %>
+      <%= link_to root_path, class: "navbar-brand" do %>
         <i class="fa fa-group"></i>
         DevMatch
       <% end %>
