--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,6 @@
 //Topography Styles
 h1, h2, h3 {
     font-family: 'open sans', sans-serif;
-    font-weight: 800;
 }
 
 //Background Gradient
@@ -38,6 +37,21 @@ background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, F
     border: none;
 }
 
+.navbar-brand {
+    font-family: 'open sans', sans-serif;
+    font-weight: 800;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+    border: 2px solid white;
+    &:hover, &:focus {
+        background-color: #00c6ff;
+    }
+}
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
     color: white;
     &:hover {
